css fixes - looks like FF doesn't fully support HTML5 elements...

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="right-lightbox.js"></script>
   </head>
   <body>
-    <header>
+    <div id="header">
       <section id="logo">
         <h1><a href="index.html">Gitifier</a></h1>
         <h3>Git commit notifier for MacOSX</h3>
@@ -27,12 +27,11 @@
           <img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
         </a>
       </aside>
-    </header>
-    <div class="clear"></div>
+    </div>
 
     <hr>
 
-    <section id="details">
+    <div id="details">
       <div>
         <section id="features">
           <p>Gitifier is an application that runs in your MacOSX menu bar
@@ -47,7 +46,7 @@
           <a href="screen-preferences2.png" rel="lightbox[screenshots]"><img src="screen-preferences2.png"></a>
         </section>
       </div>
-    </section>
+    </div>
 
     <hr>
 
