--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <a href="screen-growls.png" rel="lightbox[screenshots]"><img src="screen-growls.png"></a>
       </section>
       <section id="download">
-        <a href="http://github.com/downloads/psionides/gitifier/Gitifier-1.0.zip">
+        <a href="http://github.com/downloads/psionides/gitifier/Gitifier-1.1.zip">
           <img src="arrow.png" alt="">Download
         </a>
-        <p class="description">Version 1.0, 829 KB. Runs on MacOSX 10.5 or later.</p>
+        <p class="description">Version 1.1, 890 KB. Runs on MacOSX 10.5 or later.</p>
       </section>
       <aside id="ribbon">
         <a href="http://github.com/psionides/gitifier">
@@ -42,8 +42,8 @@
             or <a href="http://gitorious.org">Gitorious</a>, private or public.</p>
         </section>
         <section id="screenshots">
-          <a href="screen-preferences1.png" rel="lightbox[screenshots]"><img src="screen-preferences1.png"></a>
-          <a href="screen-preferences2.png" rel="lightbox[screenshots]"><img src="screen-preferences2.png"></a>
+          <a href="screen-preferences3.png" rel="lightbox[screenshots]"><img src="screen-preferences3.png"></a>
+          <a href="screen-commit.png" rel="lightbox[screenshots]"><img src="screen-commit.png"></a>
         </section>
       </div>
     </div>
