replaced observerapp tracking with pmetrics

--- a/index.html
+++ b/index.html
@@ -52,11 +52,21 @@
 
     <footer>
       <p>Copyright © <a href="http://psionides.jogger.pl">Jakub Suder</a>, 2010. &nbsp; Licensed under MIT license.</p>
-    </footer>
 
-    <script type="text/javascript" src="http://www.observerapp.com/record.js"></script>
-    <script type="text/javascript">
-      try { Observerapp.record("4ca10adcad257f7348004482"); } catch(e) {};
-    </script>
+      <script type="text/javascript">
+      var clicky = { log: function(){ return; }, goal: function(){ return; }};
+      var clicky_site_id = 13976;
+      (function() {
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = ( document.location.protocol == 'https:' ? 'https://pmetrics.performancing.com/js' : 'http://pmetrics.performancing.com/js' );
+        ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+      })();
+      </script>
+      <a title="" href="http://pmetrics.performancing.com/13976"></a>
+      <noscript><p><img alt="Performancing Metrics" width="1" height="1" src="http://pmetrics.performancing.com/13976ns.gif" /></p></noscript>
+
+    </footer>
   </body>
 </html>
