--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <hr>
 
     <footer>
-      <p>Copyright © <a href="http://psionides.jogger.pl">Jakub Suder</a>, 2010. &nbsp; Licensed under MIT license.</p>
+      <p>Copyright © <a href="http://psionides.jogger.pl">Jakub Suder</a>, 2010-11. &nbsp; Licensed under MIT license.</p>
 
       <script type="text/javascript">
       var clicky = { log: function(){ return; }, goal: function(){ return; }};
