--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <title>Gitifier: Git commit notifier for MacOSX</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="jquery.lightbox-0.5.css">
+    <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox-1.3.4.css">
     <script type="text/javascript" src="jquery-1.4.4.min.js"></script>
-    <script type="text/javascript" src="jquery.lightbox-0.5.min.js"></script>
+    <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
     <script type="text/javascript">
       $(function() {
-        $("a[rel=lightbox]").lightBox();
+        $("a[rel=lightbox]").fancybox({
+          changeSpeed: 200,
+          speedIn: 200,
+          speedOut: 200,
+          overlayColor: '#333',
+          cyclic: true
+        });
       });
     </script>
   </head>
