updated site for 1.2

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <a href="screen-growls.png" rel="lightbox"><img src="screen-growls.png"></a>
       </section>
       <section id="download">
-        <a href="http://github.com/downloads/psionides/gitifier/Gitifier-1.1.1.zip">
+        <a href="http://github.com/downloads/psionides/Gitifier/Gitifier-1.2.zip">
           <img src="arrow.png" alt="">Download
         </a>
-        <p class="description">Version 1.1.1, 872 KB. Runs on MacOSX 10.5 or later.</p>
+        <p class="description">Version 1.2, 922 KB. Runs on MacOSX 10.5 or later.</p>
       </section>
       <aside id="ribbon">
-        <a href="http://github.com/psionides/gitifier">
+        <a href="http://github.com/psionides/Gitifier">
           <img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
         </a>
       </aside>
@@ -63,7 +63,7 @@
     <hr>
 
     <footer>
-      <p>Copyright © <a href="http://psionides.jogger.pl">Jakub Suder</a>, 2010-11. &nbsp; Licensed under Eclipse Public License.</p>
+      <p>Copyright © 2010-2011 <a href="http://psionides.eu">Jakub Suder</a>. &nbsp; Licensed under Eclipse Public License.</p>
 
       <script type="text/javascript">
       var clicky = { log: function(){ return; }, goal: function(){ return; }};
