--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <a href="screen-growls.png" rel="lightbox"><img src="screen-growls.png"></a>
       </section>
       <section id="download">
-        <a href="http://github.com/downloads/psionides/Gitifier/Gitifier-1.2.zip">
+        <a href="http://github.com/downloads/psionides/Gitifier/Gitifier-1.3.zip">
           <img src="arrow.png" alt="">Download
         </a>
-        <p class="description">Version 1.2, 922 KB. Runs on MacOSX 10.5 or later.</p>
+        <p class="description">Version 1.3, 952 KB. Runs on MacOSX 10.6 or later.</p>
       </section>
       <aside id="ribbon">
         <a href="http://github.com/psionides/Gitifier">
@@ -54,7 +54,7 @@
             or <a href="http://gitorious.org">Gitorious</a>, private or public.</p>
         </section>
         <section id="screenshots">
-          <a href="screen-preferences3.png" rel="lightbox"><img src="screen-preferences3.png"></a>
+          <a href="screen-notifications.png" rel="lightbox"><img src="screen-notifications.png"></a>
           <a href="screen-commit.png" rel="lightbox"><img src="screen-commit.png"></a>
         </section>
       </div>
@@ -63,7 +63,7 @@
     <hr>
 
     <footer>
-      <p>Copyright © 2010-2011 <a href="http://psionides.eu">Jakub Suder</a>. &nbsp; Licensed under Eclipse Public License.</p>
+      <p>Copyright © 2010-2012 <a href="http://psionides.eu">Jakub Suder</a>. &nbsp; Licensed under Eclipse Public License.</p>
 
       <script type="text/javascript">
       var clicky = { log: function(){ return; }, goal: function(){ return; }};
